css/style.css
/* ... */
@media (width >= 64rem) {
  .projects-section {
    padding-block: 3.5rem;
  }
  .projects-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-height: 100vh;
  }

  .cards-container {
    grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
  }
}

.contact-container {
  display: grid;
  grid-template-columns: 1fr;
}

.contact-container .contact-info-container {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding-bottom: 6rem;
}

.contact-container .contact-info-container span:first-child {
  margin-bottom: -0.3rem;
}

.contact-container .spans-container {
  display: flex;
  flex-direction: column;
  gap: 1.8rem;
  max-width: 100%;
}

.contact-info-container .spans-container i {
  min-width: 3rem;
  margin-right: 0.5rem;
  padding: 1rem 0;
  border: var(--contact-info-icon-border);
  border-radius: var(--radius-base);
  background: var(--color-contact-info-bg);
  color: var(--color-contact-info-logo);
  text-align: center;
  transition: var(--transition-border), var(--transition-bg-color), var(--transition-text-color);
}

.contact-info-container b {
  color: var(--color-contact-info-text);
  transition: var(--transition-bg-color);
}

@media (width >= 48rem) {
  .contact-container .contact-info-container {
    max-width: 70%;
  }
}

@media (width >= 64rem) {
  .contact-section {
    padding-top: 1rem;
  }
  .contact-container {
    grid-template-columns: 1fr 1.2fr;
    justify-content: center;
    align-content: center;
    gap: 8rem;
    min-height: 100vh;
  }
  .contact-container .contact-info-container {
    max-width: 100%;
  }
}

